06-lora-serving/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
  namespace: ml-models
  labels:
    app: vllm
    component: inference
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm
  template:
    metadata:
      labels:
        app: vllm
        version: v1
    spec:
      serviceAccountName: workflow-sa
      containers:
      - name: vllm
        image: vllm/vllm-openai:v0.14.1-cu130 # official vllm image with open-ai compatible api (:latest is ok for development)
        command: ["vllm"]
        args:
        - "serve"
        - "TheBloke/Mistral-7B-v0.1-AWQ"
        - "--port=8000"
        - "--enable-lora"
        - "--lora-modules"
        - "aws-rag-qa=/mnt/adapters/aws-rag-qa"
        - "--max-model-len=4096"
        - "--gpu-memory-utilization=0.88"
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            cpu: "3"
            memory: "12Gi"
            nvidia.com/gpu: "1"
          limits:
            cpu: "4"
            memory: "14Gi"
            nvidia.com/gpu: "1"
        volumeMounts:
        - name: adapter-storage
          mountPath: /mnt/adapters
      nodeSelector:
        workload: gpu-vllm
      tolerations:
        - key: nvidia.com/gpu
          operator: Equal
          value: "true"
          effect: NoSchedule
      volumes:
      - name: adapter-storage
        emptyDir: {}
